formatting, code cleanup, renaming et al

--- a/tweetAnalysis/src/main/resources/application.conf
+++ b/tweetAnalysis/src/main/resources/application.conf
@@ -4,11 +4,11 @@ spark {
 }
 
 input {
-  file-path = "tmp/streaming/tweets"
+  file-path = "file:///tmp/streaming/tweets"
 }
 
 output {
-  analysed-path-prefix = "tmp/analysedTweet"
-  aggregated-path-prefix = "tmp/aggregatedTweet"
+  analysed-path-prefix = "file:///tmp/analysedTweet"
+  aggregated-path-prefix = "file:///tmp/aggregatedTweet"
 
 }
